<resources>
    <string name="app_name">Conserta Aqui</string>
    <string name="email_hint">Email</string>
    <string name="senha_hint">Senha</string>
    <string name="login_button_text">LOGIN</string>
    <string name="ainda_n_cadastrado">Ainda não é cadastrado? Cadastre-se!</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>
    <string name="profile">Perfil</string>
    <string name="busca">Busca</string>
    <string name="Home">Inicio</string>
    <string name="acquired">Pedidos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>