<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:orientation="vertical"
    android:background="#303F9F">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:id="@+id/campo_email"
        android:layout_marginTop="128dp"
        android:background="@color/white"
        android:padding="8dp"
        android:layout_marginHorizontal="16dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/campo_senha"
        android:hint="@string/senha_hint"
        android:padding="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@id/campo_email"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:backgroundTint="#FFC107"
        android:textColor="#303F9F"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="0dp"
        android:layout_below="@id/campo_senha"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ainda_n_cadastrado"
        android:textColor="#fff"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_login"
        />


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/img_sup"
        android:src="@drawable/img_sup"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/esqueceu_senha"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/img_sup"
        android:layout_marginBottom="8dp"
        android:textColor="#FFF"/>
</RelativeLayout>